Updated man page, more release engineering.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,8 +8,6 @@ SCRIPTS=ChumpTest.py churnsaxparser.py dailychumpcmd.py \
 WEB=__init__.py xmldir.py
 MAN1=dailychump.1
 
-PROGS=dailychump.sh
-
 DESTDIR=/usr/local
 
 all:
@@ -19,17 +17,16 @@ all:
 install:
 	mkdir -p $(DESTDIR)/lib/dailychump
 	for x in $(SCRIPTS); do \
-		install -m 0644 $$x $(DESTDIR)/lib/dailychump/$$x \
-	end
+		install -m 0644 $$x $(DESTDIR)/lib/dailychump/$$x; \
+	done
 	mkdir -p $(DESTDIR)/lib/dailychump/web
 	for x in $(WEB); do \
-		install -m 0644 $$x $(DESTDIR)/lib/dailychump/web/$$x \
-	end
-	mkdir -p $(DESTDIR)/bin
-	for x in $(PROGS); do \
-		install -m 0755 $$x $(DESTDIR)/bin/$$x \
-	end
+		install -m 0644 web/$$x $(DESTDIR)/lib/dailychump/web/$$x; \
+	done
+	sed -e 's#@@WHERE@@#$(DESTDIR)/lib/dailychump#' < dailychump \
+		> $(DESTDIR)/bin/dailychump
+	chmod 0755 $(DESTDIR)/bin/dailychump
 	mkdir -p $(DESTDIR)/man/man1
 	for x in $(MAN1); do \
-		install -m 0644 $$x $(DESTDIR)/man/man1/$$x \
-	end
+		install -m 0644 $$x $(DESTDIR)/man/man1/$$x; \
+	done
